apps/media/transmission-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int
    traefik.ingress.kubernetes.io/router.middlewares: infrastructure-authentik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: transmission.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  name: http
